Fix timebar alignment

--- a/styles/popup.css
+++ b/styles/popup.css
@@ -309,6 +309,6 @@ body {
   position:absolute;
   right: 0px;
   left: 0px;
-  bottom: 81px;
+  bottom: 67px;
   z-index: 1000;
 }
